--- a/data/pages.yml
+++ b/data/pages.yml
@@ -1,37 +1,27 @@
-- title: Page 1
-  url: page-1
+- title: People
+  url: people
   sub_pages:
-    - title: Overview
-      url: overview
-- title: Page 2
-  url: page-2
+    - title: Lab Overview
+      url: lab-overview
+- title: Publications
+  url: publications
   sub_pages:
-    - title: Sub page 4 has a really long multi-line title
-      url: sub-page-4
-- title: Page 3
-  url: page-3
+    - title: Recent Publications
+      url: recent
+- title: News
+  url: news
   sub_pages:
-    - title: Sub page 7
-      url: sub-page-7
-    - title: Sub page 8
-      url: sub-page-8
-    - title: Sub page 9
-      url: sub-page-9
-- title: Page 4
-  url: page-4
+    - title: Recent News
+      url: recent
+
+- title: Blog
+  url: blog
   sub_pages:
-    - title: Sub page 10
-      url: sub-page-10
-    - title: Sub page 11
-      url: sub-page-11
-    - title: Sub page 12
-      url: sub-page-12
+    - title: Blog Articles
+      url: articles
+
 - title: About
   url: about
   sub_pages:
-    - title: Sub page 13
-      url: sub-page-13
-    - title: Sub page 14
-      url: sub-page-14
-    - title: Sub page 15
-      url: sub-page-15
+    - title: Contact Us
+      url: contact
