Megan Brown alumni added to ‘People’ page, the new lab name (NCE Lab) and logo updated, STAR picture and NSF EAGER grant posted to ’Recent News’ page, ‘Relevant Links’ page added to own page.

--- a/data/news.yml
+++ b/data/news.yml
@@ -1,5 +1,7 @@
+- date: 09/2017
+  title: Catherine von Reyn receives an NSF EAGER Grant for Innovative Research.
 - date: 06/2017
-  title: STAR scholars Kah Young, Roze Alzabey, and Daniel Gallagher join the lab.
+  title: STAR scholars Kah Young, Roze Alzabey, and Daniel Gallagher join the lab. <img src="/labs/nce/images/group-photo-with-star-students.jpg" />
 - date: 05/2017
   title: Catherine von Reyn receives Drexel Career Development Award.
 - date: 01/2017
