--- a/data/news.yml
+++ b/data/news.yml
@@ -1,3 +1,5 @@
+- date: 05/2018
+  title: David Goodman receives a 2018 NSF Graduate Research Fellowship. Congrats David!
 - date: 09/2017
   title: Catherine von Reyn receives an NSF EAGER Grant for Innovative Research.
 - date: 06/2017
