updated with blog post and star 2018 news

--- a/data/news.yml
+++ b/data/news.yml
@@ -1,3 +1,5 @@
+- date: 07/2018
+  title: STAR scholars Pratishtha Guckhool and Neha Nevasekar join the lab. <img src="/labs/nce/images/group-photo-star-2018.png" />
 - date: 05/2018
   title: David Goodman receives a 2018 NSF Graduate Research Fellowship. Congrats David!
 - date: 09/2017
