updated news and publications

--- a/data/news.yml
+++ b/data/news.yml
@@ -1,3 +1,5 @@
+- date: 04/2019
+  title: The Neural-Circuit Engineering Lab was awarded a Margaret Q. Landenberger Research Foundation Grant!
 - date: 07/2018
   title: STAR scholars Pratishtha Guckhool and Neha Nevasekar join the lab. <img src="/labs/nce/images/group-photo-star-2018.png" />
 - date: 05/2018
