--- a/data/publications.yml
+++ b/data/publications.yml
@@ -1,3 +1,14 @@
+- authors: Fenckova M, Blok LER, Asztalos L, Goodman DP, Cizek P, Singgih EL, Glennon JC, Hout JI, Zweier C, Eichler EE, von Reyn CR, Bernier RA, Asztalos Z, Schenck A
+  title: Habituation Learning is a Widely Affected Mechanism in Drosophila Models of Intellectual Disability and Autism Spectrum Disorders.
+  journal: Biological Psychiatry, Volume 0, Issue 0
+  doi: 10.1016/j.biopsych.2019.04.029
+
+  epub: 2019 May 8
+  pmid: 
+  pmcid:
+  citedby:
+  rel: 
+
 - authors: Ache JM, Polsky J, Alghailani S, Parekh R, Breads P, Peek MY, Bock DD, von Reyn CR, Card GM.
   title: Neural Basis for Looming Size and Velocity Encoding in the Drosophila Giant Fiber Escape Pathway.
   journal: Curr Biol. 2019 Mar 18;29(6):1073-1081.e4.
@@ -10,7 +21,7 @@
 
 - authors: Goodman DP, Eldredge A, von Reyn CR.
   title: A Novel Assay to Evaluate Action Selection in Escape Behavior.
-  journal: J Neurosci Methods. 2017;94(6):1190-204 e6.
+  journal: J Neurosci Methods. 2018;94(6):1190-204 e6.
   doi: 10.1016/j.jneumeth.2018.04.019
   epub: 
   pmid: 29715480
