--- a/data/news.yml
+++ b/data/news.yml
@@ -1,3 +1,11 @@
+- date: 09/2020
+  title: Natalie Smolin, Bryce Hina, Beau Harris, and Jillian Saunders join the NCE Lab.
+- date: 09/2020
+  title: The NCE Lab was awarded an R01 from the National Institutes of Health (National Institute of Neurological Disorders and Stroke)!
+- date: 06/2020
+  title: Connor Zabielski, Khang Duong, and Joseph Rajasekaran join the NCE Lab. 
+- date: 04/2020
+  title: Bhakti Marfatia and Alex Vasserman join the NCE Lab.  
 - date: 09/2019
   title: The Neural-Circuit Engineering Lab was awarded a grant from the National Science Foundation (Division of Integrative Organismal Systems)!
 - date: 05/2019
